--- a/spé archives maths/C03/cours.tex
+++ b/spé archives maths/C03/cours.tex
@@ -86,4 +86,18 @@
     L'ensemble des applications $k$-lipschitziennes de $A$ dans $F$ est noté $\text{Lip}_k(A,\, F)$.
 \end{definition}
 
+\begin{definition}{3.30}{normes équivalentes} 
+    Soit $N$ et $N'$ deux normes sur un espace vectoriel $E$. On dit que \notion    {$N$ et $N'$ sont équivalentes} lorsque :
+    $$\exists(\alpha,\, \beta) \in (\R_+^*)^2,\, \alpha N \leq N' \leq \beta N$$
+    Il s'agit d'une relation d'équivalence.
+\end{definition}
+
+\begin{proposition}{3.31}{normes équivalentes et convergence de suites}
+    Deux normes sur un espace vectoriel sont équivalentes si et seulement si toute suite qui converge pour l'une vers $x \in E$ converge pour l'autre, également vers $x$.
+\end{proposition}
+
+\begin{proposition}{3.32}{normes équivalentes et boules incluses}
+    Deux normes sur un espace vectoriel sont équivalentes si et seulement si toute boule pour l'une contient une boule pour l'autre.
+\end{proposition}
+
 \input{../../stock/pied.tex}
