--- a/spé archives maths/C01/cours.tex
+++ b/spé archives maths/C01/cours.tex
@@ -66,7 +66,16 @@ On appelle \notion{représentant} de la classe $\cl(x)$ tout élément $y$ tel q
 \end{theoreme}
 
 \begin{theoreme}{1.71}{produits de groupes quotients}
-    Soit $(n,\, p) \in \N^2$ premiers entre eux. Les groupes $\gpquotient{np}$ et $(\gpquotient{n}) \times (\gpquotient{p})$ sont isomorphes.
+    Soit $(n,\, p) \in \Z^2$ premiers entre eux. Les groupes $\gpquotient{np}$ et $(\gpquotient{n}) \times (\gpquotient{p})$ sont isomorphes.
+\end{theoreme}
+
+\begin{theoreme}{1.72}{chinois}
+    Soit $(n,\, p) \in \Z^2$ premiers entre eux. Le système de congruences :
+    $$\begin{cases*}
+        x \equiv a &[$n$] \\
+        x \equiv b &[$p$] \\
+    \end{cases*}$$
+    admet au moins une solution $c \in \Z$. l'ensemble des solutions est la classe de $c$ modulo $np$.
 \end{theoreme}
 
 \begin{proposition}{1.75}{description des groupes monogènes}
