--- a/stock/commands.tex
+++ b/stock/commands.tex
@@ -21,21 +21,25 @@
 \newcommand{\bigO}{\mathcal{O}}
 \renewcommand{\L}{\mathcal{L}}
 
-\newcommand{\rg}[0]{\text{rg}}
-\newcommand{\re}[0]{\text{Re}}
-\newcommand{\im}[0]{\text{Im}}
-\newcommand{\cl}[0]{\text{cl}}
+\newcommand{\rg}[0]{\mathrm{rg}}
+\newcommand{\re}[0]{\mathrm{Re}}
+\newcommand{\im}[0]{\mathrm{Im}}
+\newcommand{\cl}[0]{\mathrm{cl}}
+\newcommand{\grad}[0]{\vec{\mathrm{grad}}}
+\renewcommand{\div}[0]{\mathrm{div}\,}
+\newcommand{\rot}[0]{\vec{\mathrm{rot}}\,}
+\newcommand{\vnabla}[0]{\vec{\nabla}}
 \renewcommand{\vec}[1]{\overrightarrow{#1}}
-\newcommand{\mat}[1]{\text{Mat}_{#1}}
+\newcommand{\mat}[1]{\mathrm{Mat}_{#1}}
 \newcommand{\matrice}[1]{\mathcal{M}_{#1}}
 \newcommand{\sgEngendre}[1]{\left\langle #1 \right\rangle}
 \newcommand{\gpquotient}[1]{\mathbb{Z} / #1\mathbb{Z}}
 \newcommand{\norme}[1]{||#1||}
-\renewcommand{\d}[1]{\,\text{d}#1}
+\renewcommand{\d}[1]{\,\mathrm{d}#1}
 \newcommand{\intint}[2]{\llbracket #1 ,\, #2 \rrbracket}
 \newcommand{\seg}[2]{[#1\, ; \, #2]}
 \newcommand{\scal}[2]{( #1 | #2 )}
-\newcommand{\distance}[2]{\text{d}(#1,\,#2)}
+\newcommand{\distance}[2]{\mathrm{d}(#1,\,#2)}
 \newcommand{\inte}[2]{\int_{#1}^{#2}}
 \newcommand{\somme}[2]{\sum_{#1}^{#2}}
 \newcommand{\deriveref}[4]{\biggl( \frac{\text{d}^{#1}#2}{\text{d}#3^{#1}} \biggr)_{#4}}
