--- a/spé archives maths/C03/cours.tex
+++ b/spé archives maths/C03/cours.tex
@@ -71,7 +71,8 @@
 \end{definition}
 
 \begin{definition}{3.19}{application bornée}
-    Soit $E$ un espace vectoriel normé et $X$ un ensemble fini. Une application $\varphi : X \to E$ est dite bornée lorsque l'ensemble $\im(\varphi)    $ est borné.
+    Soit $E$ un espace vectoriel normé et $X$ un ensemble fini. Une application $\varphi : X \to E$ est dite bornée lorsque l'ensemble $\im(\varphi)    $ est borné : 
+    $$\exists r \geq 0,\, \forall x \in X,\, \norme{\varphi(x)}_E < r$$
 \end{definition}
 
 \begin{definition}{3.20}{applications bornées sur un espace vecotriel normé}
