--- a/sup archives maths/C04/cours.tex
+++ b/sup archives maths/C04/cours.tex
@@ -7,4 +7,9 @@
     Soit $T>0$, $A$ une partie de $\R$, $f$ une fonction $T$-périodique sur $A$. Soit $\omega > 0$. La fonction $x \mapsto f(\omega x)$ est $\displaystyle \frac{T}{\omega}$-périodique sur l'ensemble $\displaystyle \frac{1}{\omega}A$.
 \end{proposition}
 
+\begin{definition}{4.jsp}{application croissante}
+    Soit $f:E \to F$ où $E$ et $F$ sont des ensemble ordonnés. $f$ est croissante si~:
+    $$\forall (x,y) \in E^2,\, x \leq y \implies f(x) \leq f(y)$$
+\end{definition}
+
 \input{../../stock/pied.tex}
