--- a/Informatique spé/C02/cours.tex
+++ b/Informatique spé/C02/cours.tex
@@ -184,4 +184,9 @@
     \end{cases*}$$
 \end{theoreme}
 
+
+\begin{theoreme}{2.24}{lemme d'Arden}
+    Soit $A$ et $B$ deux langages sur un même alphabet $\Sigma$. Si $\epsilon \notin A$, l'équation $L = (A\cdot L)\cup B$ admet pour unique solution le langage $A^*B$.
+\end{theoreme}
+
 \input{../../stock/pied.tex}
