--- a/spé archives maths/C04/cours.tex
+++ b/spé archives maths/C04/cours.tex
@@ -12,4 +12,12 @@
     $$\forall x \in O,\, \exists r > 0,\, \mc{B}(x,r) \subset O$$
 \end{definition}
 
+\begin{proposition}{4.5 (5)}{intersection finie de voisinage}
+    Soit $E$ un espace vectoriel normé. L'intersection finie d'ouverts de $E$ est un ouvert de $E$.
+\end{proposition}
+
+\begin{definition}{4.6}{fermé}
+    Soit $E$ un espace vectoriel normé. On appelle fermé de $E$ \notion{le complémentaire dans $E$ d'un ouvert $O$ de $E$}.
+\end{definition}
+
 \input{../../stock/pied.tex}
