--- a/stock/en-tete_v4.tex
+++ b/stock/en-tete_v4.tex
@@ -1,5 +1,6 @@
 \documentclass{article}
 \usepackage{amsmath,amssymb,mathtools}
+\usepackage{esint}
 \usepackage{xcolor}
 % \usepackage{minted}
 \usepackage{enumitem}
