--- a/sup archives maths/C18/cours.tex
+++ b/sup archives maths/C18/cours.tex
@@ -12,8 +12,8 @@
     Le cas échéant, si $k \in \R$ est un majorant de $|f'|$ sur $I$, alors $f$ est $k$-lipschitzienne.
 \end{theoreme}
 \begin{theoreme}{18.39}{de la limite de la dérivée}
-    Soit $I$ un intervalle de $\R$, $x_0 \in I$ et $f$ définie et continue sur $I$, dérivable sur $I\backslash\{x_0\}$. \\ Si $\displaystyle \lim_{\substack{x \to x_0 \\ x \neq x_0}} f'(x)$ existe dans $\overline{\R}$, alors :
-    $$\lim_{\substack{x \to x_0 \\ x \neq x_0}} f'(x) = \lim_{\substack{x \to x_0 \\ x \neq x_0}} \frac{f(x)-f(x_0)}{x-x_0}$$
+    Soit $I$ un intervalle de $\R$, $x_0 \in I$ et $f$ définie et continue sur $I$, dérivable sur $I\setminus\{x_0\}$. Si $\displaystyle \lim_{x \to x_0 } f'(x)$ existe et vaut $\ell \in \R$, alors $f$ est dérivable sur $I$ entier et~:
+    $$f'(x_0) = \ell$$
 \end{theoreme}
 
 \begin{theoreme}{18.42}{de prolongement par la classe $\mc{C}^n$}
