--- a/stock/commands.tex
+++ b/stock/commands.tex
@@ -37,6 +37,7 @@
 \newcommand{\gpquotient}[1]{\mathbb{Z} / #1\mathbb{Z}}
 \newcommand{\norme}[1]{||#1||}
 \renewcommand{\d}[1]{\,\mathrm{d}#1}
+\newcommand{\adh}[1]{\overline{#1}}
 \newcommand{\intint}[2]{\llbracket #1 ,\, #2 \rrbracket}
 \newcommand{\seg}[2]{[#1\, ; \, #2]}
 \newcommand{\scal}[2]{( #1 | #2 )}
